<resources>
    <string name="app_name">Aplikacja kolekcjonerska</string>

    <string name="fragment_category_list_delete_title">Usuń</string>
    <string name="fragment_category_list_delete_message">Czy napewno chcesz usunąć kategorię:</string>
    <string name="fragment_category_list">Kategorie</string>
    <string name="fragment_category_list_search_hint">Wyszukaj kategorię</string>

    <string name="fragment_category_entry_add__button">Dodaj</string>
    <string name="fragment_category_entry_category_name_entry">Wpisz kategorię</string>

    <string name="fragment_initialization_permission_required">Wymagane uprawnienia</string>
    <string name="fragment_initialization_permission_message">Kilka uprawnień jest wymagana aby móc korzystać z aplikacji.</string>
    <string name="fragment_initialization_permission_ok">OK</string>
    <string name="fragment_initialization_permission_cancel">Anuluj</string>

    <string name="fragment_position_entry_add_button">Dodaj</string>
    <string name="fragment_position_entry_position_name_entry">Wpisz nazwę</string>

    <string name="fragment_position_list_delete_title">Usuń</string>
    <string name="fragment_position_list_delete_message">"Czy napewno chcesz usunąć pozycję: "</string>
    <string name="fragment_position_list_search_hint">"Wyszukaj pozycję"</string>

    <string name="nav_graph_position_list_title">Lista pozycji</string>
    <string name="nav_graph_position_details_title">Szczegóły pozycji</string>
    <string name="nav_graph_position_entry_title">Nowa pozycja</string>
    <string name="nav_graph_category_entry_title">Nowa kategoria</string>
    <string name="nav_graph_permission_title">Uprawnienia</string>
    <string name="nav_graph_category_list_title">Lista kategorii</string>
    <string name="nav_graph_position_modify_title">Edycja pozycji</string>
    <string name="fragment_initialization_permission_button">Nadaj uprawnienia</string>
    <string name="fragment_position_modify_position_name_entry">Wpisz nazwę</string>
    <string name="fragment_position_modify_description">Opis pozycji</string>
    <string name="fragment_position_entry_total">Ilość</string>
    <string name="fragment_position_entry_describtion">Opis</string>
    <string name="fragment_position_entry_name">Nazwa</string>
    <string name="fragment_position_entry_producent">Producent</string>
    <string name="fragment_position_entry_price">Cena</string>
    <string name="fragment_position_entry_condition">Stan</string>
    <string name="fragment_position_entry_serial">Kod</string>
    <string name="fragment_position_entry_origin">Pochodzenie</string>
    <string name="fragment_position_entry_notes">Notatka</string>
    <string name="fragment_position_entry_date">Data wypuszczenia</string>

    <string name="fragment_position_details_total">Ilość</string>
    <string name="fragment_position_details_name">Nazwa</string>
    <string name="fragment_position_details_describtion">Opis</string>
    <string name="fragment_position_details_producent">Producent</string>
    <string name="fragment_position_details_price">Cena</string>
    <string name="fragment_position_details_condition">Stan</string>
    <string name="fragment_position_details_serial">Kod</string>
    <string name="fragment_position_details_origin">Pochodzenie</string>
    <string name="fragment_position_details_notes">Notatka</string>
    <string name="fragment_position_details_date">Data wypuszczenia</string>
    <string name="fragment_position_details_update_date">Data modyfikacji</string>
    <string name="fragment_position_details_add_date">Data dodania</string>
    <string name="fragment_position_modify_name">Nazwa</string>
    <string name="fragment_position_modify_describtion">Opis</string>
    <string name="fragment_position_modify_notes">Notatka</string>
    <string name="fragment_position_modify_producent">Producent</string>
    <string name="fragment_position_modify_price">Cena</string>
    <string name="fragment_position_modify_condition">Stan</string>
    <string name="fragment_position_modify_serial">Kod</string>
    <string name="fragment_position_modify_origin">Pochodzenie</string>
    <string name="fragment_position_modify_total">Ilość</string>

</resources>